PN-10496: fix